# public/docs/openapi.yaml
@@ -815,11 +815,11 @@ paths:
                 hora_inicio:
                   type: string
                   description: 'Must be a valid date in the format <code>H:i</code>.'
-                  example: '00:36'
+                  example: '01:21'
                 estado:
                   type: string
                   description: ''
-                  example: pendiente
+                  example: cancelada
                   enum:
                     - pendiente
                     - confirmada
@@ -988,7 +988,7 @@ paths:
                 estado:
                   type: string
                   description: ''
-                  example: cancelada
+                  example: en_proceso
                   enum:
                     - pendiente
                     - confirmada
@@ -1669,7 +1669,7 @@ paths:
                 metodo_pago:
                   type: string
                   description: ''
-                  example: efectivo
+                  example: tarjeta
                   enum:
                     - efectivo
                     - tarjeta
@@ -1687,7 +1687,7 @@ paths:
                 usar_premio_rifa:
                   type: boolean
                   description: ''
-                  example: false
+                  example: true
                   nullable: true
                 usar_paquete_id:
                   type: string
@@ -1764,6 +1764,11 @@ paths:
                   type: integer
                   description: 'El campo value debe ser al menos 0.'
                   example: 39
+                  nullable: true
+                codigo_gift_card:
+                  type: string
+                  description: 'El campo value no debe tener más de 20 caracteres.'
+                  example: gzmiyvdljnikhway
                   nullable: true
               required:
                 - appointment_id
@@ -1988,7 +1993,7 @@ paths:
                 activo:
                   type: boolean
                   description: ''
-                  example: false
+                  example: true
                   nullable: true
               required:
                 - nombre
@@ -2119,7 +2124,7 @@ paths:
                 activo:
                   type: boolean
                   description: ''
-                  example: true
+                  example: false
                   nullable: true
               required:
                 - nombre
@@ -2245,7 +2250,7 @@ paths:
                 fecha_nacimiento:
                   type: string
                   description: 'El campo value no es una fecha válida.'
-                  example: '2026-09-12T00:36:26'
+                  example: '2026-09-12T01:22:02'
                   nullable: true
                 pref_in_app:
                   type: boolean
@@ -2265,7 +2270,7 @@ paths:
                 pref_whatsapp:
                   type: boolean
                   description: ''
-                  example: true
+                  example: false
                   nullable: true
               required:
                 - name
@@ -2303,7 +2308,7 @@ paths:
                 fecha_nacimiento:
                   type: string
                   description: 'El campo value no es una fecha válida.'
-                  example: '2026-09-12T00:36:26'
+                  example: '2026-09-12T01:22:03'
                   nullable: true
                 pref_in_app:
                   type: boolean
@@ -2318,12 +2323,12 @@ paths:
                 pref_sms:
                   type: boolean
                   description: ''
-                  example: false
+                  example: true
                   nullable: true
                 pref_whatsapp:
                   type: boolean
                   description: ''
-                  example: true
+                  example: false
                   nullable: true
               required:
                 - name
@@ -2343,7 +2348,7 @@ paths:
         in: path
         name: client_slug
         description: 'The slug of the client.'
-        example: qa-gift-cards
+        example: architecto
         required: true
         schema:
           type: string
@@ -2687,7 +2692,7 @@ paths:
         in: path
         name: user_id
         description: 'The ID of the user.'
-        example: 6aa4d041340a60b00107fdf2
+        example: architecto
         required: true
         schema:
           type: string
@@ -2745,7 +2750,7 @@ paths:
                 horario_apertura:
                   type: string
                   description: 'Must be a valid date in the format <code>H:i</code>.'
-                  example: '00:36'
+                  example: '01:22'
                   nullable: true
                 horario_cierre:
                   type: string
@@ -3151,7 +3156,7 @@ paths:
                 in_app:
                   type: boolean
                   description: ''
-                  example: true
+                  example: false
                 email:
                   type: boolean
                   description: ''
@@ -3163,7 +3168,7 @@ paths:
                 whatsapp:
                   type: boolean
                   description: ''
-                  example: true
+                  example: false
                 push:
                   type: boolean
                   description: ''
@@ -3234,7 +3239,7 @@ paths:
                 content_encoding:
                   type: string
                   description: ''
-                  example: aes128gcm
+                  example: aesgcm
                   enum:
                     - aesgcm
                     - aes128gcm
@@ -3789,7 +3794,7 @@ paths:
                 activo:
                   type: boolean
                   description: ''
-                  example: true
+                  example: false
                 comision_pct:
                   type: number
                   description: 'El campo value debe ser al menos 0. El campo value no debe ser mayor que 100.'
@@ -3958,18 +3963,18 @@ paths:
       description: ''
       parameters: []
       responses:
-        401:
+        404:
           description: ''
           content:
             application/json:
               schema:
                 type: object
                 example:
-                  message: 'No autorizado.'
+                  message: 'No query results for model [App\Models\Client] architecto'
                 properties:
                   message:
                     type: string
-                    example: 'No autorizado.'
+                    example: 'No query results for model [App\Models\Client] architecto'
       tags:
         - Endpoints
       security: []
@@ -4014,7 +4019,7 @@ paths:
         in: path
         name: client_slug
         description: 'The slug of the client.'
-        example: qa-gift-cards
+        example: architecto
         required: true
         schema:
           type: string
@@ -4182,7 +4187,7 @@ paths:
                 activo:
                   type: boolean
                   description: ''
-                  example: true
+                  example: false
                   nullable: true
                 active:
                   type: boolean
@@ -4227,7 +4232,7 @@ paths:
                 tipo:
                   type: string
                   description: ''
-                  example: entrada
+                  example: salida
                   enum:
                     - entrada
                     - salida
@@ -4571,7 +4576,7 @@ paths:
                 helpful:
                   type: boolean
                   description: ''
-                  example: true
+                  example: false
               required:
                 - message
                 - response
@@ -5247,12 +5252,12 @@ paths:
                 active:
                   type: boolean
                   description: ''
-                  example: true
+                  example: false
                   nullable: true
                 activo:
                   type: boolean
                   description: ''
-                  example: true
+                  example: false
                   nullable: true
               required:
                 - nombre
@@ -5320,12 +5325,12 @@ paths:
                 active:
                   type: boolean
                   description: ''
-                  example: true
+                  example: false
                   nullable: true
                 activo:
                   type: boolean
                   description: ''
-                  example: false
+                  example: true
                   nullable: true
       security: []
     delete:
@@ -5488,7 +5493,7 @@ paths:
                 fecha:
                   type: string
                   description: 'El campo value no es una fecha válida.'
-                  example: '2026-09-12T00:36:27'
+                  example: '2026-09-12T01:22:03'
                   nullable: true
               required:
                 - product_id
